# rpi-control-server

./: Cargo.toml
crates/rpi-cs-bin/: Cargo.toml
crates/rpi-cs-bin/src/: main.rs
crates/rpi-cs-core/: Cargo.toml
crates/rpi-cs-core/src/: api.rs  bme280.rs  debug.rs  env.rs  lib.rs  weather.rs
crates/rpi-cs-core/src/routes/: catchers.rs  health.rs  mod.rs  weather.rs
