[package]
name = "rpi_cs_core"
version = "0.1.0"
authors = ["nukeop <nukeop@gumblert.tech>"]
edition = "2018"

[dependencies]
rppal = "0.11.3"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_cors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]